--- a/app/src/main/res/layout/activity_how_to_play.xml
+++ b/app/src/main/res/layout/activity_how_to_play.xml
@@ -38,7 +38,7 @@
         android:layout_marginRight="16dp"
         android:layout_marginBottom="8dp"
         android:onClick="returnToMenu"
-        android:text="Return to Menu"
+        android:text="@string/return_to_menu"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
