--- a/app/src/main/res/layout/activity_easy_game_backup.xml
+++ b/app/src/main/res/layout/activity_easy_game_backup.xml
@@ -482,7 +482,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:onClick="columnSelect"
+            android:onClick="columnPress"
             android:visibility="invisible" />
 
         <Button
