updated graphics & removed NoWinActivity + dependents

--- a/app/src/main/res/layout/activity_how_to_play.xml
+++ b/app/src/main/res/layout/activity_how_to_play.xml
@@ -54,6 +54,7 @@
                 android:gravity="center_horizontal"
                 android:text="@string/instructions1"
                 android:textAlignment="center"
+                android:textColor="@color/colorPrimary"
                 app:layout_constraintBottom_toTopOf="@+id/imageView"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.517"
@@ -70,6 +71,7 @@
                 android:layout_marginEnd="16dp"
                 android:layout_marginRight="16dp"
                 android:layout_marginBottom="8dp"
+                android:adjustViewBounds="true"
                 app:srcCompat="@drawable/connect_tap" />
 
             <TextView
@@ -85,6 +87,7 @@
                 android:gravity="center_horizontal"
                 android:text="@string/instructions2"
                 android:textAlignment="center"
+                android:textColor="@color/colorPrimary"
                 app:layout_constraintBottom_toTopOf="@+id/imageView3"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.515"
@@ -101,6 +104,7 @@
                 android:layout_marginEnd="16dp"
                 android:layout_marginRight="16dp"
                 android:layout_marginBottom="8dp"
+                android:adjustViewBounds="true"
                 android:scaleX="1"
                 android:scaleY="1"
                 app:layout_constraintBottom_toTopOf="@+id/retButton"
@@ -123,6 +127,7 @@
                 android:gravity="center_horizontal"
                 android:text="@string/instructions3"
                 android:textAlignment="center"
+                android:textColor="@color/colorPrimary"
                 app:layout_constraintBottom_toTopOf="@+id/imageView2"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.507"
@@ -139,6 +144,7 @@
                 android:layout_marginEnd="16dp"
                 android:layout_marginRight="16dp"
                 android:layout_marginBottom="8dp"
+                android:adjustViewBounds="true"
                 android:scaleX="1"
                 android:scaleY="1"
                 app:layout_constraintBottom_toTopOf="@+id/textView3"
@@ -157,8 +163,10 @@
                 android:layout_marginEnd="16dp"
                 android:layout_marginRight="16dp"
                 android:layout_marginBottom="8dp"
+                android:background="@color/colorPrimary"
                 android:onClick="back"
                 android:text="Back"
+                android:textColor="@color/colorPrimaryDark"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.504"
