--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -49,17 +49,19 @@
                 android:id="@+id/playGame"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="32dp"
-                android:layout_marginLeft="32dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginLeft="16dp"
                 android:layout_marginTop="8dp"
-                android:layout_marginEnd="32dp"
-                android:layout_marginRight="32dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginRight="16dp"
                 android:layout_marginBottom="8dp"
-                android:gravity="center_horizontal"
+                android:background="@color/colorPrimary"
                 android:onClick="play"
+                android:paddingLeft="8dp"
+                android:paddingRight="8dp"
                 android:text="@string/play"
                 android:textAlignment="center"
-                android:textColor="@color/colorPrimary"
+                android:textColor="@color/colorPrimaryDark"
                 android:textSize="18sp"
                 android:typeface="normal" />
 
@@ -73,8 +75,13 @@
                 android:layout_marginEnd="16dp"
                 android:layout_marginRight="16dp"
                 android:layout_marginBottom="8dp"
+                android:background="@color/colorPrimary"
                 android:onClick="howToPlay"
+                android:paddingLeft="8dp"
+                android:paddingRight="8dp"
                 android:text="@string/how_to_play"
+                android:textColor="@color/colorPrimaryDark"
+
                 android:textSize="18sp" />
 
             <Button
@@ -83,9 +90,13 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 android:layout_marginBottom="8dp"
+                android:background="@color/colorPrimary"
                 android:onClick="quit"
+                android:paddingLeft="8dp"
+                android:paddingRight="8dp"
+
                 android:text="quit"
-                android:textColor="@color/colorPrimary"
+                android:textColor="@color/colorPrimaryDark"
                 android:textSize="18sp" />
         </LinearLayout>
     </ScrollView>
