--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#302442</color>
-    <color name="colorPrimaryDark">#603AB5</color>
+    <color name="colorPrimary">#ACA59E</color>
+    <color name="colorPrimaryDark">#304784</color>
     <color name="colorAccent">#F4C86E</color>
-    <color name="colorBackground">#ACA59E</color>
+    <color name="colorBackground">#272727</color>
+    <color name="colorBlueChip">#4027FB</color>
+    <color name="colorRedChip">#F20300</color>
 </resources>
