--- a/app/src/main/res/layout/activity_how_to_play.xml
+++ b/app/src/main/res/layout/activity_how_to_play.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorBackground"
     tools:context=".HowToPlayActivity">
 
     <ScrollView
@@ -62,12 +61,12 @@
                 app:layout_constraintTop_toBottomOf="@+id/howToPlay" />
 
             <ImageView
-                android:id="@+id/imageView4"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginLeft="16dp"
                 android:layout_marginTop="8dp"
+                android:contentDescription="@string/how_to_img1"
                 android:layout_marginEnd="16dp"
                 android:layout_marginRight="16dp"
                 android:layout_marginBottom="8dp"
@@ -103,6 +102,7 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="16dp"
                 android:layout_marginRight="16dp"
+                android:contentDescription="@string/how_to_img2"
                 android:layout_marginBottom="8dp"
                 android:adjustViewBounds="true"
                 android:scaleX="1"
@@ -145,6 +145,7 @@
                 android:layout_marginRight="16dp"
                 android:layout_marginBottom="8dp"
                 android:adjustViewBounds="true"
+                android:contentDescription="@string/how_to_img3"
                 android:scaleX="1"
                 android:scaleY="1"
                 app:layout_constraintBottom_toTopOf="@+id/textView3"
@@ -165,7 +166,7 @@
                 android:layout_marginBottom="8dp"
                 android:background="@color/colorPrimary"
                 android:onClick="back"
-                android:text="Back"
+                android:text="@string/back"
                 android:textColor="@color/colorPrimaryDark"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
