--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorBackground"
     tools:context=".MainActivity">
 
     <ScrollView
@@ -25,7 +24,6 @@
             android:textAlignment="center">
 
             <TextView
-                android:id="@+id/mainTitle"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginStart="32dp"
@@ -46,7 +44,6 @@
                 app:fontFamily="sans-serif" />
 
             <Button
-                android:id="@+id/playGame"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
@@ -60,7 +57,6 @@
                 android:paddingLeft="8dp"
                 android:paddingRight="8dp"
                 android:text="@string/play"
-                android:textAlignment="center"
                 android:textColor="@color/colorPrimaryDark"
                 android:textSize="18sp"
                 android:typeface="normal" />
@@ -85,7 +81,6 @@
                 android:textSize="18sp" />
 
             <Button
-                android:id="@+id/quit"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
@@ -95,7 +90,7 @@
                 android:paddingLeft="8dp"
                 android:paddingRight="8dp"
 
-                android:text="quit"
+                android:text="@string/quit"
                 android:textColor="@color/colorPrimaryDark"
                 android:textSize="18sp" />
         </LinearLayout>
