--- a/app/src/main/res/layout/activity_normal_game.xml
+++ b/app/src/main/res/layout/activity_normal_game.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorBackground"
     tools:context=".GameActivities.NormalGameActivity">
 
     <!-- COLUMN BUTTONS -->
@@ -69,7 +68,6 @@
 
                 <!-- CHIP TABLE -->
                 <TableLayout
-                    android:id="@+id/chipsTable"
                     android:layout_width="0dp"
                     android:layout_height="0dp"
                     android:layout_weight="1"
@@ -79,7 +77,6 @@
                     app:layout_constraintTop_toTopOf="@+id/connectBoard">
 
                     <TableRow
-                        android:id="@+id/row5"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
@@ -157,7 +154,6 @@
                     </TableRow>
 
                     <TableRow
-                        android:id="@+id/row4"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_weight="1">
@@ -227,7 +223,6 @@
                     </TableRow>
 
                     <TableRow
-                        android:id="@+id/row3"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_weight="1">
@@ -297,7 +292,6 @@
                     </TableRow>
 
                     <TableRow
-                        android:id="@+id/row2"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_weight="1">
@@ -367,7 +361,6 @@
                     </TableRow>
 
                     <TableRow
-                        android:id="@+id/row1"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_weight="1">
@@ -437,7 +430,6 @@
                     </TableRow>
 
                     <TableRow
-                        android:id="@+id/row0"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_weight="1">
@@ -520,7 +512,7 @@
                     android:layout_marginBottom="8dp"
                     android:adjustViewBounds="true"
                     android:clickable="false"
-                    android:contentDescription="TODO"
+                    android:contentDescription="@string/connectBoardDescription"
                     android:cropToPadding="false"
                     android:focusable="false"
                     android:focusableInTouchMode="false"
@@ -531,7 +523,6 @@
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <LinearLayout
-                    android:id="@+id/columns"
                     android:layout_width="0dp"
                     android:layout_height="0dp"
                     android:orientation="horizontal"
